feat:부스위치api
